added basic html and css structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>
-
+  <div id='main-container'>
+    <div id='card-panel'>
+      <header>
+        <h1>MTG Deck Builder</h1>
+        <div id='search-bar'>
+          <img id='search-icn' src="" alt="icn">
+          <div>search</div>
+        </div>
+      </header>
+      <div id='card-container'></div>
+      <div id='page-btn-container'>
+        <div class='page-btn left'>Left</div>
+        <div class='page-btn right'>Right</div>
+      </div>
+    </div>
+    <div id='detail-panel'>
+      <div id='detail-container'></div>
+      <div id='deck-container'></div>
+    </div>
+  </div>
 </body>
 
 </html>
