--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       <div id='deck-container'></div>
     </div>
   </div>
+  <div id='search-form-container'>
+    <form id='search-form'>
+      <input id='input-name' type="text" placeholder='name'>
+    </form>
+  </div>
 </body>
 
 </html>
