added set filling and dropdown

--- a/index.html
+++ b/index.html
@@ -34,16 +34,32 @@
   <div id='search-form-container'>
     <form id='search-form'>
       <input id='input-name' type="text" placeholder='name'>
-      <input id='input-red' class='input-color' type="checkbox" value='red,'>
-      <label for='input-red'>Red</label>
-      <input id='input-blue' class='input-color' type="checkbox" value='blue,'>
-      <label for='input-blue'>Blue</label>
-      <input id='input-white' class='input-color' type="checkbox" value='white,'>
-      <label for='input-white'>White</label>
-      <input id='input-black' class='input-color' type="checkbox" value='black,'>
-      <label for='input-black'>Black</label>
-      <input id='input-green' class='input-color' type="checkbox" value='green,'>
-      <label for='input-green'>Green</label>
+      <div>
+        <input id='input-red' class='input-color' type="checkbox" value='red,'>
+        <label for='input-red'>Red</label>
+      </div>
+      <div>
+        <input id='input-blue' class='input-color' type="checkbox" value='blue,'>
+        <label for='input-blue'>Blue</label>
+      </div>
+      <div>
+        <input id='input-white' class='input-color' type="checkbox" value='white,'>
+        <label for='input-white'>White</label>
+      </div>
+      <div>
+        <input id='input-black' class='input-color' type="checkbox" value='black,'>
+        <label for='input-black'>Black</label>
+      </div>
+      <div>
+        <input id='input-green' class='input-color' type="checkbox" value='green,'>
+        <label for='input-green'>Green</label>
+      </div>
+      <div>
+        <label for='input-sets'>Set</label>
+        <select id='input-sets'>
+          <option value=''>--</option>
+        </select>
+      </div>
 
     </form>
   </div>
