added rarity input

--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
           <option value=''>--</option>
         </select>
       </div>
+      <div>
+        <label for='input-types'>Type</label>
+        <select id='input-types'>
+          <option value=''>--</option>
+        </select>
+      </div>
+      <div>
+        <label for='input-rarity'>Rarity</label>
+        <select id='input-rarity'>
+          <option value=''>--</option>
+          <option value='common'>Common</option>
+          <option value='uncommon'>Uncommon</option>
+          <option value='rare'>Rare</option>
+          <option value='mythic'>Mythic</option>
+        </select>
+      </div>
 
     </form>
   </div>
