--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
           <option value='mythic'>Mythic</option>
         </select>
       </div>
-
+      <div>
+        <label for='input-mana'>Mana Cost</label>
+        <input id='input-mana' type='text'>
+      </div>
     </form>
   </div>
 </body>
