added submit button

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <label for='input-mana'>Mana Cost</label>
         <input id='input-mana' type='text'>
       </div>
+      <button id='search-btn'>Search</button>
     </form>
   </div>
 </body>
