minor css changes

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </header>
       <div id='card-container'></div>
       <div id='page-btn-container'>
-        <div class='page-btn left'>Left</div>
-        <div class='page-btn right'>Right</div>
+        <div class='page-btn left'>Prev</div>
+        <div class='page-btn right'>Next</div>
       </div>
     </div>
     <div id='detail-panel'>
