general styling changes

--- a/index.html
+++ b/index.html
@@ -16,46 +16,48 @@
       <header>
         <h1>MTG Deck Builder</h1>
         <div id='search-bar'>
-          <img id='search-icn' src="" alt="icn">
-          <div>search</div>
+          <div id='search-icn'></div>
+          <div id='search-text'>search</div>
         </div>
         <div id='search-form-container' class='hidden'>
           <form id='search-form'>
-            <input id='input-name' type="text" placeholder='name'>
-            <div>
-              <input id='input-red' class='input-color' type="checkbox" value='red,'>
-              <label for='input-red'>Red</label>
+            <input id='input-name' type="text" placeholder='Name'>
+            <div id='input-colors'>
+              <div>
+                <input id='input-red' class='input-color' type="checkbox" value='red,'>
+                <label for='input-red'>Red</label>
+              </div>
+              <div>
+                <input id='input-blue' class='input-color' type="checkbox" value='blue,'>
+                <label for='input-blue'>Blue</label>
+              </div>
+              <div>
+                <input id='input-white' class='input-color' type="checkbox" value='white,'>
+                <label for='input-white'>White</label>
+              </div>
+              <div>
+                <input id='input-black' class='input-color' type="checkbox" value='black,'>
+                <label for='input-black'>Black</label>
+              </div>
+              <div>
+                <input id='input-green' class='input-color' type="checkbox" value='green,'>
+                <label for='input-green'>Green</label>
+              </div>
             </div>
             <div>
-              <input id='input-blue' class='input-color' type="checkbox" value='blue,'>
-              <label for='input-blue'>Blue</label>
-            </div>
-            <div>
-              <input id='input-white' class='input-color' type="checkbox" value='white,'>
-              <label for='input-white'>White</label>
-            </div>
-            <div>
-              <input id='input-black' class='input-color' type="checkbox" value='black,'>
-              <label for='input-black'>Black</label>
-            </div>
-            <div>
-              <input id='input-green' class='input-color' type="checkbox" value='green,'>
-              <label for='input-green'>Green</label>
-            </div>
-            <div>
-              <label for='input-sets'>Set</label>
+              <label for='input-sets'>Set: </label>
               <select id='input-sets'>
                 <option value=''>--</option>
               </select>
             </div>
             <div>
-              <label for='input-types'>Type</label>
+              <label for='input-types'>Type: </label>
               <select id='input-types'>
                 <option value=''>--</option>
               </select>
             </div>
             <div>
-              <label for='input-rarity'>Rarity</label>
+              <label for='input-rarity'>Rarity: </label>
               <select id='input-rarity'>
                 <option value=''>--</option>
                 <option value='common'>Common</option>
@@ -65,10 +67,10 @@
               </select>
             </div>
             <div>
-              <label for='input-mana'>Mana Cost</label>
-              <input id='input-mana' type='text'>
+              <label for='input-mana'>Converted Mana Cost: </label>
+              <input id='input-mana' type='text' placeholder='Number'>
             </div>
-            <button id='search-btn'>Search</button>
+            <button id='search-btn' class='btn'>Search</button>
           </form>
         </div>
       </header>
@@ -79,6 +81,7 @@
       </div>
     </div>
     <div id='detail-panel'>
+      <img id='detail-view-btn'></img>
       <div id='detail-container'></div>
       <div id='deck-container'></div>
     </div>
