added deck list adding and rendering

--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
       </div>
     </div>
     <div id='detail-panel'>
-      <img id='detail-view-btn'></img>
+      <img id='detail-view-btn' src='./images/deck-icon.png'></img>
       <div id='detail-container'></div>
-      <div id='deck-container'></div>
+      <div id='deck-container' class='hidden'>
+      </div>
     </div>
   </div>
   <div class='stars'></div>
