added deck shuffling functionality

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       <img id='detail-view-btn' src='./images/deck-icon.png'></img>
       <div id='detail-container'></div>
       <div id='deck-container' class='hidden'>
+        <h1>Deck</h1>
+        <div id='deck'></div>
       </div>
     </div>
   </div>
