completed test hand functionality

--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
       <div id='deck-container' class='hidden'>
         <h1>Deck</h1>
         <div id='deck'></div>
+        <div id='test-hand-btn' class='btn'>Test Hand</div>
       </div>
     </div>
+  </div>
+  <div id='test-hand-container' class='hidden'>
+    <div id='test-hand'>Hand</div>
   </div>
   <div class='stars'></div>
   <div class='twinkling'></div>
