--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./style.css">
   <script defer src="./main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -78,8 +81,8 @@
         <div id='starter-text'>Search to get started.</div>
       </div>
       <div id='page-btn-container'>
-        <div class='page-btn left'>Prev</div>
-        <div class='page-btn right'>Next</div>
+        <div class='page-btn left'>&laquo; Prev</div>
+        <div class='page-btn right'>Next &raquo;</div>
       </div>
     </div>
     <div id='detail-panel'>
