added deck number counting

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </header>
       <div id='card-container'>
-        <div id='starter-text'>Search to get started.</div>
+        <div class='starter-text'>Search to get started.</div>
       </div>
       <div id='page-btn-container'>
         <div class='page-btn left'>&laquo; Prev</div>
@@ -87,9 +87,11 @@
     </div>
     <div id='detail-panel'>
       <div id='detail-view-btn'></div>
-      <div id='detail-container'></div>
+      <div id='detail-container'>
+        <h1>Details</h1>
+      </div>
       <div id='deck-container' class='hidden'>
-        <h1>Deck</h1>
+        <h1>Deck - <span id='deck-length'>0</span></h1>
         <div id='deck'></div>
         <div id='test-hand-btn' class='btn'>Test Hand</div>
       </div>
