test hand button now disappears when deck has 0 cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div id='deck-container' class='hidden'>
         <h1>Deck - <span id='deck-length'>0</span></h1>
         <div id='deck'></div>
-        <div id='test-hand-btn' class='btn'>Test Hand</div>
+        <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
       </div>
     </div>
   </div>
