added deck switching function

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     </div>
     <div id='detail-panel'>
       <div id='detail-view-btn'></div>
-      <div id='detail-container'>
+      <div id='detail-container' class='hidden'>
         <h1>Details</h1>
       </div>
-      <div id='deck-container' class='hidden'>
+      <div id='deck-container'>
         <h1>Deck - <span id='deck-length'>0</span></h1>
         <div id='deck'></div>
         <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
