added deck swapping button

--- a/index.html
+++ b/index.html
@@ -93,14 +93,17 @@
       <div id='deck-container'>
         <h1>Deck - <span id='deck-length'>0</span></h1>
         <div id='deck'></div>
-        <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
+        <div id='deck-btn-container'>
+          <div id='deck-swap-btn' class='btn'>Decks</div>
+          <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
+        </div>
       </div>
     </div>
   </div>
   <div id='test-hand-container' class='popup-container hidden'>
     <div id='test-hand'>Hand</div>
   </div>
-  <div id='deck-list-container' class='popup-container'>
+  <div id='deck-list-container' class='popup-container hidden'>
     <div id='deck-list'>List</div>
   </div>
   <div class='stars'></div>
