added dropdown loading text

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div>
               <label for='input-sets'>Set: </label>
               <select id='input-sets'>
-                <option value=''>--</option>
+                <option value=''>Loading...</option>
               </select>
             </div>
             <div>
               <label for='input-types'>Type: </label>
               <select id='input-types'>
-                <option value=''>--</option>
+                <option value=''>Loading...</option>
               </select>
             </div>
             <div>
