auto pagination hiding

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div id='card-container'>
         <div class='starter-text'>Search to get started.</div>
       </div>
-      <div id='page-btn-container'>
+      <div id='page-btn-container' class='hidden'>
         <div class='page-btn left'>&laquo; Prev</div>
         <div class='page-btn right'>Next &raquo;</div>
       </div>
