--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
           <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
         </div>
       </div>
+      <div id='info-footer'>
+        <p><a href='https://www.linkedin.com/in/indianakuffer/' target='_blank' rel='noopener noreferrer'>Indiana
+            Kuffer</a></p>
+        <p>|</p>
+        <p><a href='https://github.com/indianakuffer' target='_blank' rel='noopener noreferrer'>Github</a></p>
+        <p>|</p>
+        <p>Powered by <a href='https://magicthegathering.io/' target='_blank'
+            rel='noopener noreferrer'>magicthegathering.io</a></p>
+      </div>
     </div>
   </div>
   <div id='test-hand-container' class='popup-container hidden'>
