footer styling fixes

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
     <p>|</p>
     <p><a href='https://github.com/indianakuffer' target='_blank' rel='noopener noreferrer'>Github</a></p>
     <p>|</p>
-    <p>Powered by <a href='https://magicthegathering.io/' target='_blank'
-        rel='noopener noreferrer'>magicthegathering.io</a></p>
+    <p><a href='https://magicthegathering.io/' target='_blank' rel='noopener noreferrer'>magicthegathering.io</a></p>
   </footer>
 </body>
 
