footer styling fixes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,15 @@
           <div id='test-hand-btn' class='btn hidden'>Test Hand</div>
         </div>
       </div>
-
+      <footer id='info-footer'>
+        <p><a href='https://www.linkedin.com/in/indianakuffer/' target='_blank' rel='noopener noreferrer'>Indiana
+            Kuffer</a></p>
+        <p>|</p>
+        <p><a href='https://github.com/indianakuffer' target='_blank' rel='noopener noreferrer'>Github</a></p>
+        <p>|</p>
+        <p><a href='https://magicthegathering.io/' target='_blank' rel='noopener noreferrer'>magicthegathering.io</a>
+        </p>
+      </footer>
     </div>
   </div>
   <div id='test-hand-container' class='popup-container hidden'>
@@ -110,14 +118,6 @@
   <div class='stars'></div>
   <div class='twinkling'></div>
   <div class='clouds'></div>
-  <footer id='info-footer'>
-    <p><a href='https://www.linkedin.com/in/indianakuffer/' target='_blank' rel='noopener noreferrer'>Indiana
-        Kuffer</a></p>
-    <p>|</p>
-    <p><a href='https://github.com/indianakuffer' target='_blank' rel='noopener noreferrer'>Github</a></p>
-    <p>|</p>
-    <p><a href='https://magicthegathering.io/' target='_blank' rel='noopener noreferrer'>magicthegathering.io</a></p>
-  </footer>
 </body>
 
 </html>
